--- a/main/src/main/resources/org/clulab/reach/biogrammar/events_master.yml
+++ b/main/src/main/resources/org/clulab/reach/biogrammar/events_master.yml
@@ -45,6 +45,10 @@ rules:
     vars:
       priority: "7"
 
+  - import: org/clulab/reach/biogrammar/properties/properties.yml
+    vars:
+      priority: "7"
+
   ###############################################################################
   #
   # Simple events
