Extract HasDomain event

--- a/main/src/main/resources/org/clulab/reach/biogrammar/properties/properties.yml
+++ b/main/src/main/resources/org/clulab/reach/biogrammar/properties/properties.yml
@@ -5,3 +5,12 @@
   type: token
   pattern: |
     [word=/(?i)sh2/ & incoming=nn]
+
+- name: hasDomain1
+  label: HasDomain
+  action: mkBioMention
+  priority: "7"
+  pattern: |
+    trigger = [lemma=domain]
+    domaintype:Domain = nn
+    theme:BioChemicalEntity = <dobj nsubj
