--- a/main/src/main/resources/org/clulab/reach/biogrammar/taxonomy.yml
+++ b/main/src/main/resources/org/clulab/reach/biogrammar/taxonomy.yml
@@ -26,6 +26,8 @@
 - PossibleController:
     - Event:
         - SimpleEvent:
+            - Property:
+              - HasDomain
             - Binding
             - Generic_event
             - Translocation
