--- a/main/src/main/resources/org/clulab/reach/biogrammar/events/pos-reg_template.yml
+++ b/main/src/main/resources/org/clulab/reach/biogrammar/events/pos-reg_template.yml
@@ -17,7 +17,7 @@
   pattern: |
     trigger = [word=/(?i)^(${ triggers })/ & !word=/^cataly/ & tag=/^V|RB/] [lemma=/^(${ auxtriggers })/ & tag=/^V/]?
     controlled:${ controlledType } = prepc_by? (/dobj|xcomp|ccomp/ [!lemma=/resistance|sensitivity/])
-      (/conj|dep|dobj|cc|nn|prep_of|prep_in$|amod/){,2}
+      (/conj|dep|dobj|cc|nn|prep_in$|amod/){,2}
     controller:${ controllerType } = <xcomp? (nsubj | nsubjpass | agent | <vmod) /appos|nn|conj_|cc|prep_of|prep_in$/{,2}
 
 
